--- a/estilo.html
+++ b/estilo.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><TItle>CAMINARE POR LAS TIERRAS</TItle>
-</head>
-<body>
+    <head>
+        <title>improvisando</title>
+        <link rel="stylesheet" href="css/estilo.css">
+    </head>
+    <body>
+        <div id ="container">git
+            <div id="post">
+                <h1>ESTO ES UNA PRUEBA  QUE HAY QUE APRENDER SI O SI</h1>
+                <P>la clase es interesante, solo que tengo que colocar en practica lo que se a aprendido</P>
+        
+    </div>
+</div>
 
-</body>
+</body> 
 </html>
 
