--- a/estilo.html
+++ b/estilo.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
-        <div id ="container">git
+        <div id ="container">
+            <div id="cabecera">cabecera</div>
             <div id="post">
                 <h1>ESTO ES UNA PRUEBA  QUE HAY QUE APRENDER SI O SI</h1>
                 <P>la clase es interesante, solo que tengo que colocar en practica lo que se a aprendido</P>
