--- a/estilo.html
+++ b/estilo.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id ="container">
-            <div id="cabecera">cabecera</div>
+            <div id="cabecera">Blog de Pueba</div>
             <div id="post">
                 <h1>ESTO ES UNA PRUEBA  QUE HAY QUE APRENDER SI O SI</h1>
                 <P>la clase es interesante, solo que tengo que colocar en practica lo que se a aprendido</P>
