agrado contenido adicional del  blog en rama master

--- a/estilo.html
+++ b/estilo.html
@@ -5,10 +5,11 @@
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
-        <div id ="container">git
+        <div id ="container">mensaje
             <div id="post">
                 <h1>ESTO ES UNA PRUEBA  QUE HAY QUE APRENDER SI O SI</h1>
                 <P>la clase es interesante, solo que tengo que colocar en practica lo que se a aprendido</P>
+                <p>ahora es la segunda parte de transformation</em></p>
         
     </div>
 </div>
