organice letras y titulos?

--- a/estilo.html
+++ b/estilo.html
@@ -5,9 +5,10 @@
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
-        <div id ="container">adicional
+        <div id ="container">
+            <div id="cabecera"> Super Mensaje</div>
             <div id="post">
-                <h1>ESTO ES UNA PRUEBA  QUE HAY QUE APRENDER SI O SI</h1>
+                <h1>ES una Practica Genial</h1>
                 <P>la clase es interesante, solo que tengo que colocar en practica lo que se a aprendido</P>
                 <p>ahora es la segunda parte de transformation</em></p>
         
