Se cambia titulo desde web
Se cambia titulo para ensayar

--- a/estilo.html
+++ b/estilo.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id ="container">
-            <div id="cabecera"> Super Mensaje</div>
+            <div id="cabecera">La vida es bella</div>
             <div id="post">
                 <h1>ES una Practica Genial</h1>
                 <P>la clase es interesante, solo que tengo que colocar en practica lo que se a aprendido</P>
