--- a/estilo.html
+++ b/estilo.html
@@ -8,7 +8,7 @@
         <div id ="container">
             <div id="cabecera">La vida es bella</div>
             <div id="post">
-                <h1>ES una Practica Genial</h1>
+                <h1>ES una Practica Genial. Bienvenido a Aprender</h1>
                 <P>la clase es interesante, solo que tengo que colocar en practica lo que se a aprendido</P>
                 <p>ahora es la segunda parte de transformation</em></p>
         
