SE COPIA LO QUE HIZO FREDIER CON EL LOGO DE HYPERBLOG

--- a/estilo.html
+++ b/estilo.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>improvisando</title>
+        <title>Bienvenido a Hiperblog</title>
         <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
         <div id ="container">
-            <div id="cabecera">La vida es bella</div>
-            <div id="post">
+            <div id = "cabecera">
+                <img id="icono" src="imagenes/robot.png"/>Hiperblog
+            <span id= "tagline">tu blog de cabecera</span>
+        </div>
+        <div id="post">            
                 <h1>ES una Practica Genial. Bienvenido a Aprender</h1>
                 <P>la clase es interesante, solo que tengo que colocar en practica lo que se a aprendido</P>
-                <p>ahora es la segunda parte de transformation</em></p>
+                <p>ahora es la segunda parte de transformation</p>
         
     </div>
 </div>
