--- a/estilo.html
+++ b/estilo.html
@@ -7,8 +7,8 @@
     <body>
         <div id ="container">
             <div id = "cabecera">
-                <img id="icono" src="imagenes/robot.png"/>Hiperblog
-            <span id= "tagline">tu blog de cabecera</span>
+                <img alt id ="icono" src="imagenes/robot.png"/> Hiperblog
+            <span id= "arialabelledby=tagline">arialabelledby=tu blog de cabecera</span>
         </div>
         <div id="post">            
                 <h1>ES una Practica Genial. Bienvenido a Aprender</h1>
