modifico la imagen y la apariencia fisica

--- a/estilo.html
+++ b/estilo.html
@@ -8,7 +8,7 @@
         <div id ="container">
             <div id = "cabecera">
                 <img alt id ="icono" src="imagenes/robot.png"/> Hiperblog
-            <span id= "arialabelledby=tagline">arialabelledby=tu blog de cabecera</span>
+            <span id = "tagline">tu blog de cabecera'</span>
         </div>
         <div id="post">            
                 <h1>ES una Practica Genial. Bienvenido a Aprender</h1>
