--- a/estilo.html
+++ b/estilo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <meta charset="UTF-8" />
     <head>
         <title>improvisando</title>
         <link rel="stylesheet" href="css/estilo.css">
@@ -12,6 +13,8 @@
                 <P>la clase es interesante, solo que tengo que colocar en practica lo que se a aprendido</P>
                 <p>ahora es la segunda parte de transformation</em></p>
         
+    </div>
+    <div id="footer">hecho con amor❤️
     </div>
 </div>
 
