se modifican tildes, y copio el parrafo del profesor

--- a/estilo.html
+++ b/estilo.html
@@ -12,9 +12,10 @@
             <span id = "tagline">tu blog de cabecera'</span>
         </div>
         <div id="post">            
-                <h1>ES una Practica Genial. Bienvenido a Aprender</h1>
-                <P>la clase es interesante, solo que tengo que colocar en practica lo que se a aprendido</P>
-                <p>ahora es la segunda parte de transformation</p>
+                <h1>Es una Práctica Genial. Bienvenido a Aprender</h1>
+                <P>y este es el párrafo de inicio donde camos a explicar las cosas increíble que se pueden hacer con las ramas.La clase es interesante, solo debo colocar en accion que se a aprendido</P>
+                <p>ahora es la segunda parte de transformación</p>
+
         
     </div>
     <div id="footer">hecho con amor❤️
