agregue una imagen al blog

--- a/estilo.html
+++ b/estilo.html
@@ -13,7 +13,8 @@
         </div>
         <div id="post">            
                 <h1>Es una Práctica Genial. Bienvenido a Aprender</h1>
-                <P>y este es el párrafo de inicio donde camos a explicar las cosas increíble que se pueden hacer con las ramas.La clase es interesante, solo debo colocar en accion que se a aprendido</P>
+                <P><img alt id= "imagen de blog" src="imagenes/smile.jpg" width="100"></P>
+                <P>y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con las ramas.La clase es interesante, solo debo colocar en accion que se a aprendido</P>
                 <p>ahora es la segunda parte de transformación</p>
 
         
