--- a/estilo.html
+++ b/estilo.html
@@ -16,7 +16,7 @@
                 <P><img alt id= "imagen de blog" src="imagenes/smile.jpg" width="100"></P>
                 <P>y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con las ramas.La clase es interesante, solo debo colocar en accion que se a aprendido</P>
                 <p>ahora es la segunda parte de transformación</p>
-
+                <p><a href="https://imgur.com/C7TAKlP" ><img src= "https://imgur.com/C7TAKlP.jpg" width="50%" title="prueba"/></a></p>
         
     </div>
     <div id="footer">hecho con amor❤️
