lineas final de curso

--- a/estilo.html
+++ b/estilo.html
@@ -17,6 +17,7 @@
                 <P>y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con las ramas.La clase es interesante, solo debo colocar en accion que se a aprendido</P>
                 <p>ahora es la segunda parte de transformación</p>
                 <p><a href="https://imgur.com/C7TAKlP" ><img src= "https://imgur.com/C7TAKlP.jpg" width="50%" title="prueba"/></a></p>
+                <p>Ahora termine el curso de github, tengo que aprender el resto</p>
         
     </div>
     <div id="footer">hecho con amor❤️
